--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,10 +47,12 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = fcitx5 -d
 exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & hyprpaper & hypridle
-exec-once = fcitx -d
+exec-once = pypr
+exec-once = wl-copy
 
 
 #############################
@@ -336,16 +338,14 @@ bind = $mainMod SHIFT, W, exec, bash ~/bin/waybarRestart.sh
 bind = $mainMod SHIFT, comma, exec, grim -g "$(slurp)" ~/Pictures/$(date +'%s.png')
 
 
-bind = $mainMod, N, exec, alacritty -e nvim ~/bin/notes.txt
+bind = $mainMod, N, exec, pypr toggle notes
+bind = $mainMod, B, exec, pypr toggle term
+
+$scratchpad = class:^(scratchpad)$
+windowrulev2 = float,$scratchpad
+windowrulev2 = workspace special silent, $scratchpad
+windowrulev2 = center,$scratchpad
 
 
 
-#scratchpad
-# exec-once = [workspace special] alacritty
-# windowrule = workspace special, alacritty
-#
-# bind = $mainMod, N, togglespecialworkspace
-#
-#
-#
 windowrule = workspace 10, title:(qBittorent)(.*)
