--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,4 +1,5 @@
 listener {
-    timeout = 1800                            # in seconds
-    on-timeout = systemctl suspend   
+    timeout = 1800 
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on    
 }
