--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,4 @@
-preload = /home/cowie/photos/kanagawaBnW2Mid.png
-wallpaper = , /home/cowie/photos/kanagawaBnW2Mid.png
+# preload = /home/cowie/photos/kanagawaBnW2Mid.png
+# wallpaper = , /home/cowie/photos/kanagawaBnW2Mid.png
+preload = /home/cowie/photos/black.jpg
+wallpaper = , /home/cowie/photos/black.jpg
