--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,15 +18,21 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+# env = WLR_NO_HARDWARE_CURSORS,1
+# ecosystem:no_update_news = true
+
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,2560x1080@144,0x0,1
+monitor=DP-2,2560x1080@144,0x0,1
 monitor=HDMI-A-1,1920x1080@60,2560x0,1
 
+# cursor {
+#     no_hardware_cursors = true
+# }
 
 ###################
 ### MY PROGRAMS ###
@@ -53,6 +59,7 @@ exec-once = $terminal
 exec-once = waybar & hyprpaper & hypridle
 exec-once = pypr
 exec-once = wl-copy
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
@@ -60,10 +67,8 @@ exec-once = wl-copy
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -218,11 +223,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod SHIFT CONTROL, Q, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen
+
 
 # bind = $mainMod, J, togglesplit, # dwindle
 
@@ -269,8 +275,8 @@ bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -283,6 +289,10 @@ bindm = $mainMod, mouse:273, resizewindow
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 bindel = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
+
+bindel = SHIFT,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +1%
+bindel = SHIFT,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -1%
+
 
 bindel = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
@@ -331,11 +341,18 @@ bind = $mainMod SHIFT, Q, exec, anki
 bind = $mainMod SHIFT, D, exec, discord
 bind = $mainMod SHIFT, S, exec, steam
 
+bind = $mainMod SHIFT, R, exec, ocenaudio
+bind = $mainMod SHIFT, V, exec, virt-manager
+
 bind = $mainMod SHIFT, O, exec, lutris
+
+bind = $mainMod SHIFT, L, exec, bash ~/bin/loopback.sh
 
 bind = $mainMod SHIFT, W, exec, bash ~/bin/waybarRestart.sh
 
 bind = $mainMod SHIFT, comma, exec, grim -g "$(slurp)" ~/Pictures/$(date +'%s.png')
+
+
 
 
 bind = $mainMod, N, exec, pypr toggle notes
@@ -348,4 +365,4 @@ windowrulev2 = center,$scratchpad
 
 
 
-windowrule = workspace 10, title:(qBittorent)(.*)
+windowrulev2 = workspace 10 silent, class:^org.qbittorrent.qBittorrent$
