--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -7,7 +7,7 @@
 
     "modules-left": ["hyprland/workspaces", "hyprland/submap", "hyprland/window"],
     "modules-center": ["clock"],
-    "modules-right": ["network", "pulseaudio","cpu", "memory","tray"],
+    "modules-right": ["network", "pulseaudio","cpu","custom/gpu","memory","tray"],
 
 
      "hyprland/workspaces": {
@@ -24,6 +24,9 @@
         "format-icons": ["", ""],
         "tooltip": true,
         "tooltip-format": "{app}: {title}"
+    },
+    "sway/workspaces":{
+      "format": "{name}",
     },
     "mpd": {
 //        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
@@ -69,10 +72,21 @@
 
 
     },
+
+    "custom/gpu": {
+      "exec": "cat /sys/class/hwmon/hwmon2/device/gpu_busy_percent",
+      "format": "  {}%",
+      "return-type": "",
+      "interval": 1,
+        "tooltip": false
+    },
+
+
     "cpu": {
         "format": "  {usage}%",
         "tooltip": false
     },
+
     "memory": {
         "format": " {}%",
         "tooltip": false
